--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE>
-<html lang="fr">
+<!DOCTYPE html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>My website</title>
+        <title>A website</title>
     </head>
     <body>
-        <h1>Hello world!</h1>
-        <p>Test paragraph.</p>
-        <p>Another tested paragraph.</p>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+        <p>Lorem ipsum, with some <em>highlighted</em> text.</p>
+        <p>dolor sit amet</p>
+        <!-- This is a comment -->
     </body>
 </html>
