--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Homepage</h1>
     <a href="https://www.theodinproject.com/about">click me</a>
+    <a href="./pages/about.html">About</a>
+    <img src="./images/dog.jpg" alt="The same dog as before">
 </body>
 </html>
